--- a/playbooks/roles/docker/tasks/main.yml
+++ b/playbooks/roles/docker/tasks/main.yml
@@ -11,15 +11,17 @@
 
 
 - name: Add docker gpg key
-  shell: "curl -fsSL https://apt.dockerproject.org/gpg | sudo apt-key add -"
+  shell: "sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D"
 
-- name: Add repo path
-  shell: 'add-apt-repository "deb https://apt.dockerproject.org/repo/ ubuntu-$(lsb_release -cs) main"'
+- apt_repository:
+    repo: deb https://apt.dockerproject.org/repo ubuntu-yakkety main'
+    state: present
 
 - name: Install docker
   apt:
-    name: docker.io
-    update_cache: yes
+   name: docker-engine
+   state: present
+   update_cache: yes
 
 - name: Update permissions
   shell: "gpasswd -a vagrant docker"
