--- a/playbooks/roles/docker/tasks/main.yml
+++ b/playbooks/roles/docker/tasks/main.yml
@@ -14,8 +14,11 @@
   shell: "sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D"
 
 - apt_repository:
-    repo: deb https://apt.dockerproject.org/repo ubuntu-yakkety main'
+    repo: deb https://apt.dockerproject.org/repo ubuntu-yakkety main
     state: present
+
+- name: Update
+  shell: "sudo apt-get update"
 
 - name: Install docker
   apt:
