--- a/playbooks/roles/docker/tasks/main.yml
+++ b/playbooks/roles/docker/tasks/main.yml
@@ -10,15 +10,14 @@
        - python-software-properties
 
 
-- name: Add docker gpg key
-  shell: "sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D"
+- apt_key:
+    id: 58118E89F3A912897C070ADBF76221572C52609D
+    url: "hkp://p80.pool.sks-keyservers.net:80"
+    state: present
 
 - apt_repository:
     repo: deb https://apt.dockerproject.org/repo ubuntu-yakkety main
     state: present
-
-- name: Update
-  shell: "sudo apt-get update"
 
 - name: Install docker
   apt:
