--- a/playbooks/roles/docker/tasks/main.yml
+++ b/playbooks/roles/docker/tasks/main.yml
@@ -10,10 +10,8 @@
        - python-software-properties
 
 
-- apt_key:
-    id: 58118E89F3A912897C070ADBF76221572C52609D
-    url: "hkp://p80.pool.sks-keyservers.net:80"
-    state: present
+- name: Add docker gpg key
+  shell: "sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D"
 
 - apt_repository:
     repo: deb https://apt.dockerproject.org/repo ubuntu-yakkety main
