better way of adding keys

--- a/playbooks/roles/swarm_master/tasks/main.yml
+++ b/playbooks/roles/swarm_master/tasks/main.yml
@@ -14,8 +14,8 @@
 
 - fetch:
     src: /tmp/token_manager
-    dest: /tmp/token_manager
+    dest: ~/
 
 - fetch:
     src: /tmp/token_worker
-    dest: /tmp/token_worker
+    dest: ~/
