--- a/playbooks/roles/docker/tasks/main.yml
+++ b/playbooks/roles/docker/tasks/main.yml
@@ -10,8 +10,8 @@
        - python-software-properties
 
 
-- name: Add docker gpg key
-  shell: "sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D"
+- name: "Install docker apt key"
+  apt_key: keyserver=hkp://p80.pool.sks-keyservers.net:80 id=58118E89F3A912897C070ADBF76221572C52609D state=present
 
 - apt_repository:
     repo: deb https://apt.dockerproject.org/repo ubuntu-yakkety main
