--- a/playbooks/roles/swarm_worker/tasks/main.yml
+++ b/playbooks/roles/swarm_worker/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - copy: 
     # Warning! Need a more dynamic way of finding the token! 
-    src: '/tmp/token_worker/swarm0/tmp/token_worker'
+    src: '~/swarm0/tmp/token_worker'
     dest: '/tmp/token_worker'
     owner: 'vagrant'
 
